[gd_scene load_steps=5 format=2]

[ext_resource path="res://code/main.gd" type="Script" id=1]
[ext_resource path="res://imag/CardsTree.jpg" type="Texture" id=2]
[ext_resource path="res://imag/BG/GabinteMesa.jpg" type="Texture" id=5]
[ext_resource path="res://imag/Captura de Tela 2022-02-18 Ã s 09.30.42.png" type="Texture" id=9]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Chamadas" type="Sprite" parent="."]
position = Vector2( 508, 281 )
scale = Vector2( 0.952077, 0.952077 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
scale = Vector2( 0.539548, 0.554977 )
z_index = -1
texture = ExtResource( 5 )

[node name="Consulta_sprite" type="Sprite" parent="."]
position = Vector2( 509, 288 )
scale = Vector2( 0.701942, 0.690965 )
texture = ExtResource( 9 )

[node name="BTN" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Positivo" type="Button" parent="BTN"]
anchor_left = 0.419
anchor_top = 0.875
anchor_right = 0.488
anchor_bottom = 0.908
margin_left = -43.056
margin_top = -0.250061
margin_right = -42.712
margin_bottom = 0.0159912
text = "Concorda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="BTN"]
margin_left = 555.0
margin_top = 523.0
margin_right = 628.0
margin_bottom = 543.0
text = "Discordar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="BTN"]
margin_left = 45.0
margin_top = 466.0
margin_right = 117.0
margin_bottom = 486.0
text = "Consultar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="BTN/Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="." method="_on_Consulta_button_up"]
